# sq

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  sq
.github/workflows/: build.yml
src/: main.rs
