[package]
name = "sq-cli"
version = "0.1.1"
edition = "2021"
authors = ["linux_china <libing.chen@gmail.com>"]
description = "sq(Squirrel) is a command-line snippet keeper"
keywords = ["snippet", "squirrel", "cli"]
categories = ["command-line-utilities"]
documentation = "https://github.com/linux-china/sq"
readme = "README.md"
homepage = "https://github.com/linux-china/sq"
repository = "https://github.com/linux-china/q"
license = "Apache-2.0"

[dependencies]
bytecount = "0.6.9"
just = "1.42"
clap = "4.5"
colored = "2.2"
dirs = "5.0"
which = "7"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = true

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
